<resources>
    <string name="app_name">Take the bullfighter with the horns</string>
    <string name="etPass_hint">Contraseña</string>
    <string name="etEmail_hint">Correo electrónico</string>
    <string name="btSubmit_text">Conectar</string>
    <string name="btSignUp_text">Registrarse</string>
    <string name="tvNonRegister1_text">O puede continuar sin registrarse pulsando</string>
    <string name="tvNonRegister2_text">aquí</string>
    <string name="tvForgotPass_text">¿Has olvidado la contraseña?</string>
    <string name="etEmailSingUp_hint">Introduce un correo electrónico</string>
    <string name="etPassSingUp_hint">Introduce una contraseña</string>
    <string name="etPassAgainSingUp_hint">Introduce la contraseña de nuevo</string>
    <string name="etBirthdaySignUp_hint">Selecciona tu fecha de nacimiento</string>
    <string name="tvGemderSignUp_text">Género</string>
    <string name="rbGenderMaleSignUp_text">Hombre</string>
    <string name="rbGenderFemaleSignUp_text">Mujer</string>
    <string name="rbGenderOtherSignUp_text">Otro</string>
    <string name="etUserSingUp_hint">Introduce un nombre de usuario</string>
    <string name="btSignUpActivity_text">Registrarse</string>
    <string name="datetimepicker_cancel">Cancelar</string>
    <string name="datetimepicker_ok">OK</string>
    <string name="title_activity_new_">Noticia</string>
    <string name="etComment_New_hint">Comentario...</string>
    <string name="tvComments_New_text">Comentarios</string>
    <string name="action_search_user_title">Buscar usuario</string>
    <string name="action_settings_title">Opciones</string>
    <string name="action_about_me_title">Acerca de...</string>
    <string name="action_login_title">Iniciar sesión</string>
    <string name="action_close_session_title">Cerrar sesión</string>
    <string name="tvAbout_text">Aplicación creada por Yeray Ruiz Juárez como proyecto de fin de curso en IES Portada Alta, Málaga</string>
    <string name="action_support_title">Soporte</string>
    <string name="pref_notifications_summary">Notificaciones</string>
    <string name="pref_notifications_title">Mostrar notificaciones de noticias</string>
    <string name="pref_category_general_title">General</string>
    <string name="pref_category_privacy_title">Privacidad</string>
    <string name="pref_show_email_summary">Muestra el correo en tu perfil para que lo vea la gente</string>
    <string name="pref_show_email_title">Mostrar email</string>
    <string name="pref_show_gender_summary">Muestra el género en tu perfil para que lo vea la gente</string>
    <string name="pref_show_gender_title">Mostrar género</string>
    <string name="pref_show_birthday_summary">Muestra la fecha de nacimiento en tu perfil para que lo vea la gente</string>
    <string name="pref_show_birthday_title">Mostrar fecha de nacimiento</string>
    <string name="action_sort_by_date_title">Ordenar por fecha</string>
</resources>