<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_general_title">
        <SwitchPreference
            android:defaultValue="true"
            android:summary="@string/pref_notifications_summary"
            android:title="@string/pref_notifications_title"
            android:key="notifications" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_privacy_title">
        <SwitchPreference
            android:defaultValue="false"
            android:summary="@string/pref_show_email_summary"
            android:title="@string/pref_show_email_title"
            android:key="showemail" />
        <SwitchPreference
            android:defaultValue="false"
            android:summary="@string/pref_show_gender_summary"
            android:title="@string/pref_show_gender_title"
            android:key="showgender" />
        <SwitchPreference
            android:defaultValue="false"
            android:summary="@string/pref_show_birthday_summary"
            android:title="@string/pref_show_birthday_title"
            android:key="showbirthday" />
    </PreferenceCategory>
</PreferenceScreen>