<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:icon="@android:drawable/ic_menu_search"
        android:id="@+id/action_search_user"
        app:showAsAction="always"
        android:title="@string/action_search_user_title"/>
    <item android:icon="@android:drawable/ic_menu_sort_by_size"
        android:id="@+id/action_sort_by_date"
        app:showAsAction="always"
        android:title="@string/action_sort_by_date_title"/>
    <item android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings_title"/>
    <item android:id="@+id/action_support"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_support_title"/>
    <item android:id="@+id/action_about_me"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_about_me_title"/>
    <item android:id="@+id/action_close_session"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_close_session_title"
        android:visible="false"/>
    <item android:id="@+id/action_login"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_login_title"
        android:visible="false"/>
</menu>