<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.phile.yrj.takethebullfighterwiththehorns.SignUp_Activity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/svSignUp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/tilUser_SignUp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error"
                app:hintTextAppearance="@style/hint"
                android:layout_marginBottom="5dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:ems="10"
                    android:layout_alignParentRight="true"
                    android:id="@+id/etUser_SignUp"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/etUserSingUp_hint"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/tilEmail_SignUp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error"
                app:hintTextAppearance="@style/hint"
                android:layout_below="@+id/tilUser_SignUp"
                android:layout_marginBottom="5dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:layout_alignParentRight="true"
                    android:id="@+id/etEmail_SignUp"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/etEmailSingUp_hint"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/tilPass_SignUp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error"
                app:hintTextAppearance="@style/hint"
                android:layout_below="@id/tilEmail_SignUp"
                android:layout_marginBottom="5dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:layout_alignParentRight="true"
                    android:id="@+id/etPass_SignUp"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/etPassSingUp_hint"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/tilPassAgain_SignUp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error"
                app:hintTextAppearance="@style/hint"
                android:layout_below="@id/tilPass_SignUp"
                android:layout_marginBottom="5dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:layout_alignParentRight="true"
                    android:id="@+id/etPassAgain_SignUp"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/etPassAgainSingUp_hint"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/tilBirthday_SignUp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error"
                app:hintTextAppearance="@style/hint"
                android:layout_below="@id/tilPassAgain_SignUp"
                android:layout_marginBottom="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:ems="10"
                    android:layout_alignParentRight="true"
                    android:id="@+id/etBirthday_SignUp"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/etBirthdaySignUp_hint"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilBirthday_SignUp"
                android:id="@+id/lyGender_SignUp"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical">
                <TextView
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvGender_SignUp"
                    android:text="@string/tvGemderSignUp_text"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/rgGender_SignUp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbGenderMale_SignUp"
                        android:text="@string/rbGenderMaleSignUp_text"
                        android:checked="true" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbGenderFemale_SignUp"
                        android:text="@string/rbGenderFemaleSignUp_text"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbGenderOther_SignUp"
                        android:text="@string/rbGenderOtherSignUp_text"/>
                </RadioGroup>
            </LinearLayout>
            <Button
                android:text="@string/btSignUpActivity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btSignUp_SignUp"
                android:layout_centerHorizontal="true"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_below="@id/lyGender_SignUp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
